feat: add test logs
