# backend/docs/swagger.yaml
@@ -56,68 +56,6 @@ definitions:
       message:
         type: string
     type: object
-  judge.SubmissionRequest:
-    properties:
-      language:
-        description: e.g., "cpp", "python"
-        type: string
-      memory_limit_kb:
-        type: integer
-      source_code:
-        type: string
-      submission_id:
-        type: string
-      test_cases:
-        description: Up to 20 cases
-        items:
-          $ref: '#/definitions/judge.TestCase'
-        type: array
-      time_limit_ms:
-        type: integer
-    type: object
-  judge.SubmissionResponse:
-    properties:
-      compile_error:
-        type: string
-      overall_state:
-        description: '"Accepted", "Wrong Answer", "Compile Error"'
-        type: string
-      results:
-        items:
-          $ref: '#/definitions/judge.TestCaseResult'
-        type: array
-      submission_id:
-        type: string
-    type: object
-  judge.TestCase:
-    properties:
-      expected_output:
-        type: string
-      input:
-        type: string
-      test_case_id:
-        type: integer
-    type: object
-  judge.TestCaseResult:
-    properties:
-      actual_output:
-        type: string
-      expected_output:
-        type: string
-      input:
-        type: string
-      memory_kb:
-        type: integer
-      status:
-        description: '"Passed", "Wrong Answer", "Runtime Error"'
-        type: string
-      stderr:
-        type: string
-      test_case_id:
-        type: integer
-      time_ms:
-        type: integer
-    type: object
   model.APIKey:
     properties:
       created_at:
@@ -138,6 +76,23 @@ definitions:
         type: array
       user_id:
         type: string
+    type: object
+  model.APIKeyStats:
+    properties:
+      api_key_id:
+        type: string
+      error_counts:
+        additionalProperties:
+          type: integer
+        type: object
+      peak_rpd:
+        type: integer
+      peak_rpm:
+        type: integer
+      success_rate:
+        type: number
+      total_requests:
+        type: integer
     type: object
 host: localhost:8080
 info:
@@ -277,6 +232,36 @@ paths:
       summary: Generate API Key
       tags:
       - APIKeys
+  /auth/api-keys/stats:
+    get:
+      description: Retrieve performance metrics and usage peaks for a specific API
+        key.
+      parameters:
+      - description: API Key ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: API Key Statistics
+          schema:
+            $ref: '#/definitions/model.APIKeyStats'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - Bearer: []
+      summary: Get API Key Stats
+      tags:
+      - APIKeys
   /auth/login:
     post:
       consumes:
@@ -378,59 +363,6 @@ paths:
       summary: Get Dashboard Data
       tags:
       - Dashboard
-  /status:
-    get:
-      description: Get the result or pending status of a submission by ID.
-      parameters:
-      - description: Submission ID
-        in: query
-        name: submission_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Submission result or pending
-          schema:
-            $ref: '#/definitions/judge.SubmissionResponse'
-        "400":
-          description: Missing submission_id
-          schema:
-            type: string
-      summary: Check Submission Status
-      tags:
-      - Judge
-  /submit:
-    post:
-      consumes:
-      - application/json
-      description: Queue a new code submission for judging.
-      parameters:
-      - description: Submission Request
-        in: body
-        name: submission
-        required: true
-        schema:
-          $ref: '#/definitions/judge.SubmissionRequest'
-      produces:
-      - application/json
-      responses:
-        "202":
-          description: 'Accepted: submission_id'
-          schema:
-            type: string
-        "400":
-          description: Method not allowed, Invalid JSON, or Limits too high
-          schema:
-            type: string
-        "500":
-          description: Failed to queue submission
-          schema:
-            type: string
-      summary: Submit Code
-      tags:
-      - Judge
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer" followed by a space and then your personal token.
